sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/SBS_ScheduledBatchComponent__mdt.object-meta.xml
<CustomObject>
    <description>Contains the classes which are included in the scheduled batch runs. The components can be filtered to only be included in certain batch runs and have a priority in order to enforce an order of the batches.</description>
    <label>Scheduled Batch Component</label>
    <pluralLabel>Scheduled Batch Components</pluralLabel>
</CustomObject>