sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the batch is active and thus included in batch runs.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>