sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>The class name of the batch class</description>
    <label>Class</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>