sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/DayOfMonth__c.field-meta.xml
<CustomField>
    <fullName>DayOfMonth__c</fullName>
    <description>The batch will run during the supplied day of the month.</description>
    <inlineHelpText>Only applicable for schedule: Day Of Month</inlineHelpText>
    <label>Day Of Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>