sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <description>The batch will only run during the specified day of the week.</description>
    <inlineHelpText>Only applicable for schedule: Day Of Week</inlineHelpText>
    <label>Day Of Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Monday</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tuesday</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Wednesday</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Thursday</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Friday</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Saturday</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Sunday</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>