sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/Group__c.field-meta.xml
<CustomField>
    <fullName>Group__c</fullName>
    <description>The group which the component belongs to. A component in a given group will only run if all other previously run components in the group ran successfully.</description>
    <inlineHelpText>The group which the component belongs to. A component in a given group will only run if all other previously run components in the group ran successfully.</inlineHelpText>
    <label>Group</label>
    <length>10</length>
    <type>Text</type>
</CustomField>