sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/MonthOfYear__c.field-meta.xml
<CustomField>
    <fullName>MonthOfYear__c</fullName>
    <description>The month of the year at which the batch should be run in batch runs.</description>
    <inlineHelpText>Only applicable for schedule type: Day Of Year</inlineHelpText>
    <label>Month Of Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>January</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>February</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>March</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>April</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>May</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>June</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>July</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>August</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>September</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>October</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>November</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>December</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>