sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/OnlyExecuteOnWorkingDays__c.field-meta.xml
<CustomField>
    <fullName>OnlyExecuteOnWorkingDays__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Skips the batch if the batch was set ot execute on a non working day. I.e. a holiday or a weekend.</description>
    <label>Only Execute On Working Days</label>
    <type>Checkbox</type>
</CustomField>