sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>The priority of the batch. Batches with lower priority will run before batches with a higher priority value.</description>
    <label>Priority</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>