sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/Schedule__c.field-meta.xml
<CustomField>
    <fullName>Schedule__c</fullName>
    <description>The schedule for which days should include the given batch in the batch run.</description>
    <label>Schedule</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily</fullName>
                <default>true</default>
                <label>Daily</label>
            </value>
            <value>
                <fullName>Day Of Week</fullName>
            </value>
            <value>
                <fullName>Day Of Month</fullName>
            </value>
            <value>
                <fullName>Last Day Of Month</fullName>
            </value>
            <value>
                <fullName>Day Of Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>