sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/ScopeSize__c.field-meta.xml
<CustomField>
    <fullName>ScopeSize__c</fullName>
    <defaultValue>200</defaultValue>
    <description>The size of the execution scope for each batch.</description>
    <label>Scope Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>