sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/TimeSegment__c.field-meta.xml
<CustomField>
    <fullName>TimeSegment__c</fullName>
    <description>The name of the time segment of the scheduled batch run which this batch should run within.</description>
    <label>Time Segment</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>