sas-core/main/default/objects/SBS_ScheduledBatchComponent__mdt/fields/WorkingDayOffset__c.field-meta.xml
<CustomField>
    <fullName>WorkingDayOffset__c</fullName>
    <description>The number of working days which monthly or weekly daily should be offset by in relation to working day. A weekly batch which executes the first working day on mondays will execute on wednesday if both monday and tuesday were holidays wereas the second working day would have executes on thursdays. Working days does not include registered holidays as well as saturdays and sundays.</description>
    <label>Working Day Offset</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>First Working Day</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Second Working Day</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>